--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/Imagen/Animales/Perros/maltese-puppies.jpg" alt="imagen de un perro">
-    <img src="/Imagen/Animales/Gatos/cat4.jpg" alt="imagen de un gato">
-    <img src="/Imagen/Automoviles/Autos/Automobili_Pininfarina_Battista_GIMS_2019-01155.jpg" alt="imagen de auto">
-    <img src="/Imagen/Automoviles/Motos/YAMAHA_R3_AZUL_PORTADA1-750x572.jpg" alt="imagen de una Motos">
+    <img src="maltese-puppies.jpg" alt="imagen de un perro">
+    <img src="cat4.jpg" alt="imagen de un gato">
+    <img src="Automobili_Pininfarina_Battista_GIMS_2019-01155.jpg" alt="imagen de auto">
+    <img src="YAMAHA_R3_AZUL_PORTADA1-750x572.jpg" alt="imagen de una Motos">
 </body>
 </html>
